# idx-data-pipeline

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: quality_rules.yaml  sources.yaml
data/processed/: bi_sbi_rates_2002_2007.csv  dividend_historis_2002_2007.csv  ticker_availability.csv
data/raw/: idx_checkpoint.db  idx_daily_prices_2002_2007.csv
data/reference/: corporate_action_split_log.csv
docs/: DATA_LIMITATIONS.md  DATA_QUALITY_REPORT.md  VALIDATION_REPORT.md  VALIDATION_RUN_OUTPUT.md
logs/: bandit_report.txt  flake8_report.txt  pip_audit_report.json  yaml_validation.txt
pipeline/: config.py  data_quality.py  dividend_scraper.py  orchestrator.py  rate_scraper.py  sanitize.py  schema.py  split_log_builder.py
pipeline/adapters/: base.py  yahoo.py
tests/: docker_build_test.txt  test_adapters.py  test_config.py  test_dockerfile_sim.sh  test_orchestrator_merge.py  test_quality_config.py  test_stock_split.py  test_suku_bunga.py
